Somr proofreading, mostly in Chapter 9

--- a/graphicstext/news.html
+++ b/graphicstext/news.html
@@ -16,7 +16,7 @@
 can be found in the on-line version of this page, at<br>
 <a href="http://math.hws.edu/graphicsbook/news.html">http://math.hws.edu/graphicsbook/news.html</a></h3>
 
-<p style="text-align:center; text-indent:0"><b>Non-trivial substantive errors that are found in the book</br>
+<p style="text-align:center; text-indent:0"><b>Nontrivial substantive errors that are found in the book</br>
 will also be posted on that page.</b></p>
 
 <hr>
