Preparing for Version 1.4 release

--- a/graphicstext/news-for-web.html
+++ b/graphicstext/news-for-web.html
@@ -23,7 +23,7 @@
 <body>
 <div class="page">
 <div class="content">
-<h3 class="chapter_title">Introduction to Computer Graphics</h3>
+<h3 class="chapter_title">Introduction to Computer Graphics, Version 1.4</h3>
 <h2 class="chapter_title">News</h2>
 
 
@@ -32,10 +32,33 @@
 <h2>News for <a href="index.html"><i>Introduction to Computer Graphics</i></a></h2>
 
 <ul>
+<li><b>August 1, 2023</b> &mdash; Version 1.4 is released.  The major change is a new Chapter&nbsp;9,
+covering WebGPU.  This version also updates <i>three.js</i> to Release 154, using the modular form of the library.
+It adds a new section on JavaScript promises to Appendix&nbsp;A.</li>
+</ul>
+
+
+<hr>
+
+<!-- 
+<h2>Errata</h2>
+<p>This is a list of substantive errors that have been found in Version 1.4.  These errors
+have been corrected in the web site version without changing the version number.
+<ul>
+<li><b>Section ...</b>: ...<span class="error">...</span> ... <span class="fix">... 
+<span class="date">...</date></li>
+</ul>
+<hr>
+-->
+
+
+
+<h2>Old News</h2>
+
+<ul>
 <li><b>May 30, 2023</b> &mdash; <b>New chapter on WebGPU</b>.  In spite of saying previously
 that this textbook was in final form, I have decided to add a new chapter on WebGPU. I am writing it
-over the summer.  You can see what I have so far at 
-<a href="https://math.hws.edu/eck/cs424/graphicsbook-1.4/c9/index.html">this&nbsp;link</a>.</li>
+over the summer.</li>
 <li><b>December 17, 2022</b> &mdash; I have now retired from teaching.  I do not plan any further updates 
 to this textbook. &mdash;<a href="https://math.hws.edu/eck/index.html">David&nbsp;Eck</a></li>
 <li><b>July 22, 2022</b> &mdash; The original link to the printed version of this text at lulu.com no longer
@@ -62,14 +85,6 @@ to the texture.</li>
 <li><b>August 1, 2021</b> &mdash; Version 1.3 is released.  This version updates the textbook to
 use current versions of <i>three.js</i>, Blender, JavaScript, and WebGL.  (For WebGL, most of the
 coverage is still about WebGL 1.0, but information about WebGL 2.0 has been added.)</li>
-</ul>
-
-
-<hr>
-
-<h2>Old News</h2>
-
-<ul>
 <li><b>January 6, 2018</b> &mdash; Version 1.2 is released.  This version fixes a few errors
 and updates Chapter 5 to use release 91 of three.js.</li>
 <li><b>December 15, 2017</b> &mdash; I used this textbook for a course in Fall 2017.
@@ -93,17 +108,6 @@ on-line version is preferred, since it contains interactive content.</li>
 <li><b>August 1, 2015</b> &mdash; Version 1.0 of the book is released.  It is not as complete
 as I would like, but has more than enough material for a one-semester course.</li>
 </ul>
-
-<!-- 
-<hr>
-<h2>Errata</h2>
-<p>This is a list of substantive errors that have been found in Version 1.2.  These errors
-have been corrected in the web site version without changing the version number.
-<ul>
-<li><b>Section ...</b>: ...<span class="error">...</span> ... <span class="fix">... 
-<span class="date">...</date></li>
-</ul>
--->
 
 
 <hr>
