Small correction in Section 3.3.4.

--- a/graphicstext/news-for-web.html
+++ b/graphicstext/news-for-web.html
@@ -40,16 +40,21 @@ It adds a new section on JavaScript promises to Appendix&nbsp;A.</li>
 
 <hr>
 
-<!-- 
 <h2>Errata</h2>
 <p>This is a list of substantive errors that have been found in Version 1.4.  These errors
-have been corrected in the web site version without changing the version number.
+have been corrected in the web site version without changing the version number or updating any of the
+downloads.</p>
 <ul>
-<li><b>Section ...</b>: ...<span class="error">...</span> ... <span class="fix">... 
-<span class="date">...</date></li>
+<li><b>Section 2.2.1</b>: In the pseudocode for drawing an oval 
+near the end of the subsection, where it says <span class="error">Draw Line from (x1,y1) to (x2,y2)</span>,
+it should say  <span class="fix">Draw Line from <b>(a1,b1)</b> to <b>(a2,b2)</b></span>.
+<span class="date">(1&nbsp;December&nbsp;2023</span></li>
+<li><b>Section 3.3.4</b>: The sentence <span class="error"><i>The inverse of "translate 90 then rotate 10" is "rotate -10
+then translate -90"</i></span> is technically correct, but in the context of inverting the modeling transformation
+"<tt>glRotate(90,0,1,0); glTranslate(10,0,0)</tt>", it should be <span class="fix"><i>The inverse of "translate 10 then rotate 90" is 
+"rotate -90 then translate -10"</i></span>.</li>
 </ul>
 <hr>
--->
 
 
 
